--- a/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
@@ -1,1 +1,11 @@
-<p>searchresults works!</p>
+<!-- <div class="border border-secondary">
+  <div id="friends">
+      <div id = 'friend' *ngFor="let friend of friends">
+          <app-friend [friend]="friend">
+          </app-friend>
+      </div>
+  </div>
+  <form (submit)='onSubmit(input.value)' >
+      <input #input type='text' class="form-control rounded-0" (keyup)='onKey(input.value)' placeholder='Add a friend!' id="input" autocomplete='off'>
+  </form>
+</div> -->
