--- a/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/searchresults/searchresults.component.html
@@ -1,11 +1,8 @@
-<!-- <div class="border border-secondary">
+<div class="border border-secondary">
   <div id="friends">
-      <div id = 'friend' *ngFor="let friend of friends">
-          <app-friend [friend]="friend">
-          </app-friend>
+      <div id  *ngFor="let search of searches">
+          <app-search [search]="search">
+          </app-search>
       </div>
   </div>
-  <form (submit)='onSubmit(input.value)' >
-      <input #input type='text' class="form-control rounded-0" (keyup)='onKey(input.value)' placeholder='Add a friend!' id="input" autocomplete='off'>
-  </form>
-</div> -->
+</div>
