--- a/frontend/src/app/components/sidebar/header/header.component.html
+++ b/frontend/src/app/components/sidebar/header/header.component.html
@@ -36,7 +36,7 @@
       <mat-form-field class="input">
         <input matInput #search (keyup)='onKey(search.value)' class='form-control input' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
         <i fas fa-search aria-hidden="true"></i>
-        <mat-label>Search a place</mat-label>
+        <mat-label>Search</mat-label>
       </mat-form-field>
 
     </form>
