--- a/frontend/src/app/components/sidebar/header/profile/profile.component.html
+++ b/frontend/src/app/components/sidebar/header/profile/profile.component.html
@@ -1,10 +1,16 @@
 <div id="main" class="border border-secondary rounded">
+
+    <!-- after fetching data -->
     <div *ngIf='User'>
+
+        <!-- generate propreties -->
         <app-proprety *ngFor='let proprety of propreties; let i = index' [username]='User.username' [proprety]='proprety' [propretyValue]='values[i]'></app-proprety>
         <div id='delete'>
             <button class='btn btn-danger' (click)='onDelete()'>Delete Account</button>
         </div>
     </div>
+
+    <!-- no wifi or user not found -->
     <div *ngIf='!User'>
         Error: User not found
     </div>
