--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -67,7 +67,7 @@ mwlResizable
         </ul>
         <br>
         <router-outlet></router-outlet>
-        <app-registration-process></app-registration-process>
+        <!-- <app-registration-process></app-registration-process> -->
         <!-- <button class="btn btn-primary" (click)='searchFriend()'>send Friendlist</button> -->
     </mat-drawer>
 </mat-drawer-container>
