--- a/frontend/src/app/components/chatsystem/friendlist/friendlist.component.scss
+++ b/frontend/src/app/components/chatsystem/friendlist/friendlist.component.scss
@@ -1,10 +1,9 @@
 #id {
-  color:red($color: #123455)
+  color:red($color: #123455);
 }
 
 #input {
   width: 100%;
-  // border-radius: 0px;
 }
 
 #friends {
