--- a/frontend/src/app/components/sidebar/header/header.component.html
+++ b/frontend/src/app/components/sidebar/header/header.component.html
@@ -31,6 +31,10 @@
 <ul class="nav nav-pills nav-fill">
 
   <li class="nav-item">
+    <img src="assets/img/travelnet.jpg" id="logo" alt="asd" (click)="onReload()">
+  </li>
+
+  <li class="nav-item">
     <form (submit)='onSubmit(search.value)' class='form'>
 
       <mat-form-field class="input">
