--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,35 +3,34 @@
 <head>
 
   <title></title>
+
+  <!-- popperjs import -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
+  <!-- socketio import -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" alt='/socket.io/socket.io.js' defer></script>
+
+  <!-- font import -->
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap');
   </style>
+
+  <!-- mapbox css import -->
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet'/>
 
 </head>
 
 <body (window:resize)='resizeWindow()' [attr.height]='windowHeight'>
+  
   <app-map></app-map>
-
-
-
-  <router-outlet ></router-outlet>
-
-
-
+ 
+  <router-outlet></router-outlet>
+  
   <div>
     <app-sidebar></app-sidebar>
   </div>
-
-
-
   <div id="chatsystem">
     <app-chatsystem></app-chatsystem>
   </div>
-
-
 </body>
 </html>
