--- a/frontend/src/app/components/chatsystem/chatwidget/chatwidget.component.html
+++ b/frontend/src/app/components/chatsystem/chatwidget/chatwidget.component.html
@@ -1,11 +1,14 @@
 <div  id='main' class="col-auto" *ngIf='sessionState'>
+  <!-- top of widget -->
   <div class="space rounded-top" [innerText]='sessionRoomName' aria-readonly="true" (click)='toggleChatWidget()'></div>
 
+  <!-- messages -->
   <div class="text-wrap" id='chatbody'*ngIf='sessionState'>
     <br>
     <div class="text-wrap" id='textarea' #textarea ></div>
   </div> 
 
+  <!-- text and enter button -->
   <div class='space rounded-bottom' >
     <form (submit)='sendMessage(msg.value)' class="container-fluid" autocomplete="off">
       <div class="row">
