--- a/frontend/src/app/components/chatsystem/chatwidget/chatwidget.component.scss
+++ b/frontend/src/app/components/chatsystem/chatwidget/chatwidget.component.scss
@@ -1,6 +1,6 @@
 ul {
   text-align: left;
-  padding-left: 0em
+  padding-left: 0em;
 }
 
 #chatbody {
@@ -14,7 +14,7 @@ ul {
   overflow-y: auto;
   overflow-x: hidden;
   display: flex;
-  flex-direction: column-reverse ;
+  flex-direction: column-reverse;
 }
 
 .space.rounded-top {
