--- a/frontend/src/app/components/sidebar/header/header.component.scss
+++ b/frontend/src/app/components/sidebar/header/header.component.scss
@@ -1,3 +1,9 @@
+#logo {
+  position: relative;
+  top: 15px;
+  width: 500%;
+  border-radius: 10%;
+}
 
 #searchResultsContainer {
     background-color: rgba(255,255,255, $alpha: 0.9);
