--- a/frontend/src/app/components/registration-process/country-selector/country-selector.component.html
+++ b/frontend/src/app/components/registration-process/country-selector/country-selector.component.html
@@ -39,5 +39,9 @@
             <mat-icon matChipRemove class="" *ngIf='removable'>cancel</mat-icon>
         </mat-chip>
     </mat-chip-list>
-    <hr>  
+    <hr>
 </div>
+<div class="row-auto">
+    <button mat-button *ngIf='true' class="btn-danger" (click)='onClear()'>Clear</button>
+</div>
+<br>
