--- a/frontend/src/app/components/sidebar/header/loginpage/loginpage.component.html
+++ b/frontend/src/app/components/sidebar/header/loginpage/loginpage.component.html
@@ -29,7 +29,7 @@ id='form'
     <mat-form-field appearance="outline" class='form-group' id="username">
       <mat-label for='username'>Email or Username</mat-label>
       <input matInput formControlName='username' placeholder="Enter a Username" autocomplete="off">
-      <small class="help-block text-danger" *ngIf="!loginForm.get('username').valid && loginForm.get('username').touched">Please enter something</small>
+      <small class="help-block text-danger" *ngIf="!loginForm.get('username').valid">Please enter something</small>
     </mat-form-field>
     
 
