--- a/frontend/src/app/components/sidebar/header/tabs/mytrip/mytrip.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/mytrip/mytrip.component.html
@@ -1,1 +1,7 @@
-<h1> {{ name }} </h1>
+<div class="container-fluid">
+    <mat-card class="">
+        <mat-card-content class="">
+            <h1> {{ name }} </h1>
+        </mat-card-content>
+    </mat-card>
+</div>
