--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -29,6 +29,9 @@
   <div>
     <app-sidebar></app-sidebar>
   </div>
+  <div style="z-index: 2; position: absolute; top: 0; right: 0;">
+    <header-navbar></header-navbar>
+  </div>
   <div id="chatsystem">
     <app-chatsystem></app-chatsystem>
   </div>
