--- a/frontend/src/app/components/registration-process/registrationpage/registrationpage.component.scss
+++ b/frontend/src/app/components/registration-process/registrationpage/registrationpage.component.scss
@@ -4,17 +4,6 @@
     z-index: 1;
 }
 
-// input.ng-invalid.ng-touched {
-//     border: 1px solid red;
-// }
-
 #username,#email{
-  width:465px
-}
-mat-form-field{
-  width: 200px;
-  margin-bottom: 0px;
-}
-#calendar{
-  height:38px;
+  width: 100%;
 }
