--- a/frontend/src/app/components/sidebar/header/header.component.html
+++ b/frontend/src/app/components/sidebar/header/header.component.html
@@ -30,21 +30,21 @@
 
 <ul class="nav nav-pills nav-fill">
 
-  <li class="nav-item">
+  <!-- logo -->
+  <!-- <li class="nav-item">
     <img src="assets/img/travelnet.jpg" id="logo" alt="asd" (click)="onReload()">
-  </li>
+  </li> -->
 
-  <li class="nav-item">
+  <!-- search bar -->
+  <!-- <li class="nav-item">
     <form (submit)='onSubmit(search.value)' class='form'>
-
       <mat-form-field class="input">
         <input matInput #search (keyup)='onKey(search.value)' class='form-control input' type='search' placeholder='Search' aria-label='Search' autocomplete='off'>
         <i fas fa-search aria-hidden="true"></i>
         <mat-label>Search</mat-label>
       </mat-form-field>
-
     </form>
-  </li>
+  </li> -->
 
   <!-- Register and Login buttons -->
   <li *ngIf='!sessionState' class="nav-item topButton">
