--- a/frontend/src/app/components/sidebar/header/tabs/mytrip/mytrip.component.html
+++ b/frontend/src/app/components/sidebar/header/tabs/mytrip/mytrip.component.html
@@ -1,4 +1,10 @@
 <div class="container-fluid">
+    <!-- <mat-card>
+        <mat-card-content>
+            New Trip
+        </mat-card-content>
+    </mat-card>
+    <mat-divider class=""></mat-divider> -->
     <mat-card class="">
         <mat-card-content class="">
             <h1> {{ name }} </h1>
