--- a/frontend/src/app/components/registration-process/registration-process.component.scss
+++ b/frontend/src/app/components/registration-process/registration-process.component.scss
@@ -1,11 +1,3 @@
-.mat-stepper-horizontal {
-    margin-top: 8px;
-}
-  
-.mat-form-field {
-    margin-top: 16px;
-}
-
-app-registrationpage {
-    width: 100%;
+:host ::ng-deep .mat-horizontal-content-container {
+    padding:0 !important;
 }
