--- a/frontend/src/app/components/sidebar/header/loginpage/loginpage.component.html
+++ b/frontend/src/app/components/sidebar/header/loginpage/loginpage.component.html
@@ -15,6 +15,8 @@
       <button type='submit' class='btn btn-primary'>Login</button>
   </form>
 </div> -->
+<br>
+<br>
 
 <mat-card class="">
   <mat-card-content class="">
@@ -48,7 +50,13 @@
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
       </mat-form-field>
-      <button type='submit' id='submit' class='btn btn-primary' aria-required='true'>Login</button>
+      <button mat-raised-button type='submit' id='submit' color='primary' aria-required='true'>Login</button>
     </form>
+  </mat-card-content>
+</mat-card>
+<hr class="hr-text" data-content="OR">
+<mat-card class="">
+  <mat-card-content class="row" style="padding-left: 25%; padding-right: 25%;">
+    <button mat-raised-button color='primary' class="col" routerLink='/register'>Register</button>
   </mat-card-content>
 </mat-card>
