--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -29,7 +29,7 @@
   <div>
     <app-sidebar></app-sidebar>
   </div>
-  <div style="z-index: 2; position: absolute; top: 0; right: 0;">
+  <div style="z-index: 2; position: absolute; top: 1%; right: 1%;">
     <header-navbar></header-navbar>
   </div>
   <div id="chatsystem">
