--- a/frontend/src/app/components/registration-process/registration-process.component.scss
+++ b/frontend/src/app/components/registration-process/registration-process.component.scss
@@ -1,3 +1,7 @@
 :host ::ng-deep .mat-horizontal-content-container {
-    padding:0 !important;
+    padding:1% !important;
+}
+
+mat-horizontal-stepper {
+    width: 100%;
 }
