--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -36,6 +36,7 @@ mwlResizable
     Open Sidebar
     </button>
 </div>
+
 <mat-drawer-container class='container-fluid' style="overflow-x: hidden;" autosize >
     <mat-drawer
     mwlResizable
@@ -64,15 +65,30 @@ mwlResizable
             </div>
             <br>
 
+            <!-- hide sidebar -->
             <button id='closeToggle' class="close-nav nav-link" type="button" mat-button (click)="window = !window">
-                <span>&times;</span>
+                <span>
+                    <svg class="bi bi-arrow-bar-left" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M5.854 4.646a.5.5 0 0 0-.708 0l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L3.207 8l2.647-2.646a.5.5 0 0 0 0-.708z"/>
+                        <path fill-rule="evenodd" d="M10 8a.5.5 0 0 0-.5-.5H3a.5.5 0 0 0 0 1h6.5A.5.5 0 0 0 10 8zm2.5 6a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 1 0v11a.5.5 0 0 1-.5.5z"/>
+                    </svg>
+                </span>
             </button>
 
-            <div class="container-fluid">
-                <router-outlet></router-outlet>
-            </div>
+            <!-- resize sidebar icon -->
+            <button mat-button id="resize">
+                <span>
+                    <svg class="bi bi-grip-horizontal" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M7 2a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                    </svg>
+                </span>
+            </button>
 
+            <div class="container-fluid" style="width: 100%; height: 500px; padding: 0;">
+                <router-outlet style="width: 100%;"></router-outlet>
+            </div>
         </ul>
-        <br>
     </mat-drawer>
 </mat-drawer-container>
+
+
